--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>tajir-dark-dex</title>
+  <title>Tajir Wallet Dex</title>
   <meta name="description" content="Lovable Generated Project" />
   <meta name="author" content="Lovable" />
 
